# ChangeLog for eix - Ebuild IndeX for portage

*eix-0.35.0
	Martin Väth <martin at mvath.de>:
	- Support IDEPEND (EAPI=8). Output is not optimized yet: only DEPEND
	  and RDEPEND have a shortcut if one is a substring of the other.

*eix-0.34.12
	Martin Väth <martin at mvath.de>:
	- Fix wrong braces configure.ac. Thanks to Ionen Wolkens for spotting.

*eix-0.34.11
	wwjjbb (https://github.com/wwjjbb):
	- Fix --proto category output: https://github.com/vaeth/eix/issues/80

*eix-0.34.10
	Andrew Kravchuk (https://github.com/lockie):
	- Make eix-remote more silent

*eix-0.34.9
	Jan Ziak <0xe2.0x9a.0x9b at gmail.com>:
	- Use sse2 for speedup of eix-update.

*eix-0.34.8
	Martin Väth <martin at mvath.de>:
	- Fix regression of 0.34.6 (and 0.34.5): Fix override_by_map. Thanks to
	  Grzegorz Kulewski <grzegorz at kulewski.pl> for debugging help.

*eix-0.34.7
	Martin Väth <martin at mvath.de>:
	- Due to the previous 2 releases, eix --print USE is now correct.
	  Use the special variable USE.make_conf to get the previous value.

*eix-0.34.6
	Martin Väth <martin at mvath.de>:
	- Read make.conf twice: A first reading is needed to find the profile
	  paths (e.g. PORTDIR_OVERLAY). But the "main" reading must happen
	  after reading the profiles since profile variables like ARCH can be
	  used in make.conf; this seems to match portage's current behavior.
	  See the comments in https://github.com/vaeth/eix/issues/76

*eix-0.34.5
	Martin Väth <martin at mvath.de>:
	- Read make.conf after profiles https://github.com/vaeth/eix/issues/76

*eix-0.34.4
	Martin Väth <martin at mvath.de>:
	- Simplify eix.proto:
	  - Use eix_proto namespace, avoid nesting messages unnecessarily
	  - Rename the main proto to not misleadingly indicate the source
	- Minor change of the proto wire format (extension w/ deprecation) to
	  allow distinction between empty and unset/equal effective keywords
	- Manpage typo fixes, and clarify that --proto is setting independent