@@ -4,6 +4,7 @@
 	Martin Väth <martin at mvath.de>:
 	- Support IDEPEND (EAPI=8). Output is not optimized yet: only DEPEND
 	  and RDEPEND have a shortcut if one is a substring of the other.
+	- Use natural order for USE, see https://github.com/vaeth/eix/issues/86
 
 *eix-0.34.12
 	Martin Väth <martin at mvath.de>:
